--- a/emilygriffin.css
+++ b/emilygriffin.css
@@ -1,1 +1,5 @@
-body { background-color: rgb(223,223,214); }
+body { 
+	background-color: rgb(222,183,217); 
+	padding: 100px;
+	color: rgb(222,183,277);
+	}
